# game-of-pure-strategy

./: .flake8  README.md  pyproject.toml
.github/workflows/: test-and-build.yml
game_of_pure_strategy/: __init__.py  gops.py  modeling.py  payoff_matrix.py  strategy.py
tests/: test_game_of_pure_strategy.py  test_payoff_matrix.py
