[tool.poetry]
name = "game-of-pure-strategy"
version = "0.1.0"
description = ""
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mip = "^1.9.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = {version = "^3.8.3", allow-prereleases = true}
mypy = {version = "^0.780", allow-prereleases = true}
flake8-mypy = {version = "^17.8.0", allow-prereleases = true}
ipython = "^7.15.0"
ipykernel = "^5.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
